WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29604
HTMLMediaElement: media file should not reloaded when page comes out of page cache
https://bugs.webkit.org/show_bug.cgi?id=29604
Summary
HTMLMediaElement: media file should not reloaded when page comes out of page ...
Eric Carlson
Reported
2009-09-21 12:03:40 PDT
Recent changes to WebKit's page cache cause a media element to to always reload when its page comes out of the page cache. According to the spec, an element should only reload when the fetching process is aborted by the user, not when an element has completed loading.
Attachments
proposed patch
(8.06 KB, patch)
2009-09-21 12:13 PDT
,
Eric Carlson
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-09-21 12:04:01 PDT
rdar://7235647
Eric Carlson
Comment 2
2009-09-21 12:13:40 PDT
Created
attachment 39864
[details]
proposed patch
Eric Carlson
Comment 3
2009-09-21 13:55:51 PDT
http://trac.webkit.org/changeset/48596
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug