2009-09-21  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Brady Eidson.

        HTMLMediaElement: media file should not reload when page comes out of page cache
        https://bugs.webkit.org/show_bug.cgi?id=29604

        Test: media/restore-from-page-cache.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::userCancelledLoad): Do nothing unless the element
        is still loading. Only fire an 'emptied' event if the readyState is HAVE_NOTHING,
        otherwise set the network state to NETWORK_IDLE.

2009-09-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Brady Eidson.

        HTMLMediaElement: media file should not reload when page comes out of page cache
        https://bugs.webkit.org/show_bug.cgi?id=29604

        * media/restore-from-page-cache-expected.txt: Added.
        * media/restore-from-page-cache.html: Added.



Canonical link: https://commits.webkit.org/40159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48596 268f45cc-cd09-0410-ab3c-d52691b4dbfc